@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Added vertical slider showing position of the current frame inside the series
 * Display of orientation markers
 * New configuration options:
   - "ShowInfoPanelAtStartup" to control the info panel at startup
